[metadata]
name = py2df
author = PgBiel, Skezza, Reasonless
summary = A tool for converting Python code to DiamondFire code.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/Py2DF/Py2DF
project_urls =
    Bug Tracker = https://github.com/Py2DF/Py2DF/issues
    Source Code = https://github.com/Py2DF/Py2DF
license = MIT

[files]
packages = py2df

[entry_points]
console_scripts =
    py2df = py2df:main
